update content from theme

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -167,7 +167,7 @@
       "discount_label": "You're saving {{ amount }} with {{ title }}",
       "subtotal": "Subtotal",
       "subtotal_items": "Items",
-      "shipping_at_checkout": "Shipping & taxes calculated at checkout",
+      "shipping_at_checkout": "Loved by 100,000+ Aussies",
       "customer_note": "Special instructions for seller",
       "cart_notes_label": "Add order notes",
       "gift_notes_label": "Is this a gift? Add a note.",
