Make some tweaks to the accordion section of the PDP. 1. Put the Description in a dropdown, 2. Make titles bolder and slightly bigger. See below. Note - the theme is live now so please work off a duplicate until approved.

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -483,6 +483,7 @@
       "regular_price": "Regular price",
       "description": "description",
       "view_all_details": "View all details",
+      "accord_description": "Product Description",
       "reviews": "Reviews",
       "filters": "Filters",
       "filter_by": "Filter by",
