--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -168,6 +168,8 @@
       "subtotal": "Subtotal",
       "subtotal_items": "Items",
       "shipping_at_checkout": "Loved by over 100,000 Aussies",
+      "shipping_at_checkout_1": "Free AU Shipping (ex WA/NT)",
+      "shipping_at_checkout_2": "12 Month Warranty",
       "customer_note": "Special instructions for seller",
       "cart_notes_label": "Add order notes",
       "gift_notes_label": "Is this a gift? Add a note.",
