--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -7,7 +7,7 @@
       "more_colors": "+ {{ number }} more"
     },
     "size_chart": {
-      "size": "Size"
+      "size": "Size, Height, Weight"
     },
     "accessibility": {
       "skip_to_content": "Skip to content",
@@ -168,7 +168,7 @@
       "subtotal": "Subtotal",
       "subtotal_items": "Items",
       "shipping_at_checkout": "Loved by over 100,000 Aussies",
-      "shipping_at_checkout_1": "Free AU Shipping (ex WA/NT)",
+      "shipping_at_checkout_1": "Free AU Shipping (ex WA\/NT)",
       "shipping_at_checkout_2": "12 Month Warranty",
       "customer_note": "Special instructions for seller",
       "cart_notes_label": "Add order notes",
